2019-10-01  Charlie Zender  <zender@uci.edu>

	* Update ANNOUNCE, document ilev_nm, lev_nm, and plev_nm in nco.texi

	* Deprecate ALM from ncremap/ncclimo options

2019-09-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha08: Svadhyaya';git push
	git tag -a 4.8.2-alpha08 -m 'MacOS 10.14.6 xcode 11 macports 2.6.0 gcc 9.2 issues;ncremap sgs back-compatability, vrt prs tm_nbr fix ilev fix;nco.texi rgr';git push --tags

	* Account for vertical layers in clever interface pressure memory allocation, then deprecate it as too clever

	* Prevent taking double logarithm if input and output interface pressures

	* Change default vertical interpolation back from linear to logarithmic

	* Add vrt_ntp, vrt_xtr synonyms to ncks

2019-09-29  Charlie Zender  <zender@uci.edu>

	* Allow users to specify pressure coordinate name with plev_nm_in

	* Always define prs_ntf in case no prs_mdp variables are extracted in vertical interpolation

2019-09-27  Charlie Zender  <zender@uci.edu>

	* Ensure ilev name and size match lev name and size for	pure-pressure vertical grids

	* Ensure tm_nbr >= 1 for pure-pressure vertical grids

	* Define and check-for ilev_nm_in == NULL to fix interpolation to pressure-levels

	* Clarify ncks -H == --data option in nco.texi

	* ncremap do not enter file loop for map-only invocations: fl_nbr=0 so bch_nbr=0

2019-09-26  Charlie Zender  <zender@uci.edu>

	* Document simultaneous vertical/horizontal regridding

	* Document ncremap vertical interpolation algorithm options vrt_ntp=lin|log

2019-09-24  Charlie Zender  <zender@uci.edu>

	* Implement landfrac and landmask defaults with -P sgs for back-compatibility

	* Deprecate last vestiges of old-SGS and GSG code from ncremap

2019-09-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha07: XTerra/Sukhasana';git push